--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <canvas id="canvas1"></canvas>
         <audio  id="audio1" controls hidden></audio>
     </div>
+        <button id="startButton">Start Recording</button>
+        <button id="stopButton">Stop Recording</button>
     <input type="file" id='fileUpload' accept='audio/*'>
 </body>
 </html>
